--- a/movieme/movieme/Base.lproj/Main.storyboard
+++ b/movieme/movieme/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="JKa-QT-tuG">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="JKa-QT-tuG">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -203,6 +203,7 @@
                         <outlet property="actors" destination="wfJ-ZU-rdj" id="FSt-LX-aDi"/>
                         <outlet property="director" destination="f8F-aA-jow" id="Rd3-YB-0qP"/>
                         <outlet property="genre" destination="QK4-Kb-4vD" id="Ddj-ZB-Gm3"/>
+                        <outlet property="likebutton" destination="UjF-Tn-cNG" id="sv3-ao-cxx"/>
                         <outlet property="movieDescription" destination="k7p-U9-ga2" id="5fy-Qe-Tij"/>
                         <outlet property="movieTitle" destination="I5l-1l-Z6Z" id="arq-0g-t1G"/>
                         <outlet property="posterImage" destination="JEQ-uX-0R0" id="MOq-H3-WFu"/>
@@ -516,7 +517,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="KxT-rI-yFg">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell" id="KxT-rI-yFg" customClass="MyCollectionViewCell" customModule="movieme" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="64" width="120" height="170"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -555,6 +556,9 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Likes" id="Rtj-MC-oUR"/>
+                    <connections>
+                        <outlet property="collectionView" destination="Rj3-Dt-1aM" id="6Oc-wS-Ast"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Xyf-ie-taG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
